CSS: fixed z-index of the search results pane

--- a/source/assets/stylesheets/index.css.scss
+++ b/source/assets/stylesheets/index.css.scss
@@ -108,6 +108,7 @@ header {
         box-sizing: border-box;
         max-height: 40vh;
         overflow-y: auto;
+        z-index: 9999;
         
         .result {
             padding: $padding-normal $padding-small;
